se agrego refrencia a la hora de estilos y se creo dicha hoja

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HTML5 y CSS3 - Un sitio de una sola p&aacute;gina</title>
     <meta name="description" content="Aprenda HTML5 CSS3 y ESO de forma simple, práctica y objetiva">
     <link rel="icon" href="img/favicon.png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
