--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <!-- Encabezado  -->
+    <header>
+
+    </header>
+    <!-- Destaque -->
+    <main>
+        <h1>HTML5 y CSS3</h1>
+        <h2>Haces, ves y aprend&eacute;</h2>
+    </main>
+    <!-- Sobre -->
+    <section>
+        <h2>Aprender haciendo</h2>
+    </section>
+    <!-- Una pagina -->
+    <section>
+        <h2>Sitio de una sola p&aacute;gina</h2>
+    </section>
+    <!-- Wireframe -->
+    <section>
+        <h2>Wireframe</h2>
+    </section>
+    <!-- Contenido -->
+    <section>
+        <h2>Contenido</h2>
+        <h3>HTML5</h3>
+        <h3>BOX MODEL CSS</h3>
+        <h3>BREAKPOINTS</h3>
+    </section>
+    <!-- Pie de página -->
+    <footer>
+
+    </footer>
 </body>
 </html>
