Tipografia y modificaciones del layout

--- a/index.html
+++ b/index.html
@@ -11,31 +11,43 @@
 <body>
     <!-- Encabezado  -->
     <header>
+        <div class="contenedor">
 
+        </div>
     </header>
     <!-- Destaque -->
     <main>
-        <h1>HTML5 y CSS3</h1>
-        <h2>Haces, ves y aprend&eacute;</h2>
+        <div class="contenedor">
+            <h1>HTML5 y CSS3</h1>
+            <h2>Hac&eacute;s, ves y aprend&eacute;</h2>
+        </div>
     </main>
     <!-- Sobre -->
     <section>
-        <h2>Aprender haciendo</h2>
+        <div class="contenedor">
+            <h2>Aprender haciendo</h2>
+        </div>
     </section>
     <!-- Una pagina -->
     <section>
-        <h2>Sitio de una sola p&aacute;gina</h2>
+        <div class="contenedor">
+            <h2>Sitio de una sola p&aacute;gina</h2>
+        </div>
     </section>
     <!-- Wireframe -->
     <section>
-        <h2>Wireframe</h2>
+        <div class="contenedor">
+            <h2>Wireframe</h2>
+        </div>
     </section>
     <!-- Contenido -->
     <section>
-        <h2>Contenido</h2>
-        <h3>HTML5</h3>
-        <h3>BOX MODEL CSS</h3>
-        <h3>BREAKPOINTS</h3>
+        <div class="contenedor">
+            <h2>Contenido</h2>
+            <h3>HTML5</h3>
+            <h3>BOX MODEL CSS</h3>
+            <h3>BREAKPOINTS</h3>
+        </div>        
     </section>
     <!-- Pie de página -->
     <footer>
