--- a/index.html
+++ b/index.html
@@ -10,26 +10,38 @@
 </head>
 <body>
     <!-- Encabezado  -->
-    <header>
-        <div class="contenedor">
-
+    <header id="inicio">
+        <div class="contenedor Flex">
+            <div id="logo">
+                <img src="img/logo.png" alt="logo site">
+            </div>
+            <nav>
+                <input type="checkbox" id="check">
+                <label for="check">&#x268c;</label>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#contenido">Contenido</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <!-- Destaque -->
     <main>
         <div class="contenedor">
             <h1>HTML5 y CSS3</h1>
-            <h2>Hac&eacute;s, ves y aprend&eacute;</h2>
+            <h2>Hac&eacute;s, ves y aprend&eacute;s</h2>
         </div>
     </main>
     <!-- Sobre -->
-    <section>
+    <section id="sobre">
         <div class="contenedor">
             <h2>Aprender haciendo</h2>
         </div>
     </section>
     <!-- Una pagina -->
-    <section>
+    <section id="contenido">
         <div class="contenedor">
             <h2>Sitio de una sola p&aacute;gina</h2>
         </div>
@@ -50,8 +62,9 @@
         </div>        
     </section>
     <!-- Pie de página -->
-    <footer>
+    <footer id="contacto">
 
     </footer>
+    <a href="#inicio" id="tope"><img src="img/topo.png" alt="cabecera"></a>
 </body>
 </html>
