--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="contenedor">
             <h1>HTML5 y CSS3</h1>
             <h2>Hac&eacute;s, ves y aprend&eacute;s</h2>
+            <a href="https://www.youtube.com/watch?v=M2GjflypG6E" target="_blank" class="boton">Sepa m&aacute;s</a>
         </div>
     </main>
     <!-- Sobre -->
