Agregando efecto rolagem e outras funcionalidades

--- a/index.html
+++ b/index.html
@@ -32,13 +32,35 @@
         <div class="contenedor">
             <h1>HTML5 y CSS3</h1>
             <h2>Hac&eacute;s, ves y aprend&eacute;s</h2>
-            <a href="https://www.youtube.com/watch?v=M2GjflypG6E" target="_blank" class="boton">Sepa m&aacute;s</a>
+            <a href="https://www.youtube.com/watch?v=M2GjflypG6E" target="_blank" class="boton">Sepa +</a>
         </div>
     </main>
     <!-- Sobre -->
     <section id="sobre">
-        <div class="contenedor">
-            <h2>Aprender haciendo</h2>
+        <div class="contenedor Flex2">
+            <div id="destaquesobre">
+                    <img src="img/html5css3.jpg" alt="html5css3">
+            </div>
+            <div id="textosobre">
+                <h2>Aprender haciendo</h2>
+                <p>Aprende HTML5, CSS3 y SEO de forma simple, pr&aacute;ctica y 
+                    objetiva desarrolladndo paso a paso desde cero hasta el 
+                    hospedaje de un sitio de una sola p&aacute;gina moderno y responsivo
+                </p>
+                <div class="topicossobre Flex2">
+                    <img src="img/html5.png" alt="html5">
+                    <p>HTML5</p>
+                </div>
+                <div class="topicossobre Flex2">
+                    <img src="img/css3.png" alt="css3">
+                    <p>CSS3</p>
+                </div>
+                <div class="topicossobre Flex2">
+                    <img src="img/seo.png" alt="seo">
+                    <p>HTML5</p>
+                </div>
+            </div>
+            
         </div>
     </section>
     <!-- Una pagina -->
