Agregando el video de youtube

--- a/index.html
+++ b/index.html
@@ -64,9 +64,18 @@
         </div>
     </section>
     <!-- Una pagina -->
-    <section id="contenido">
-        <div class="contenedor">
-            <h2>Sitio de una sola p&aacute;gina</h2>
+    <section id="unapagina">
+        <div class="contenedor Flex3">
+            <div id="textositio">
+                <h2>Sitio de una sola p&aacute;gina</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint aliquid ullam omnis esse dolores cum rem eveniet numquam, iusto, minus vero dolor facere aspernatur pariatur excepturi dolore exercitationem debitis consequatur!
+                </p>
+            </div>
+            <div id="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/7EfnrepGkoE?si=ict6BbAcuwwEbdO5" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </section>
     <!-- Wireframe -->
