Actualización del sitio con el wireframe y el archivo PDF

--- a/index.html
+++ b/index.html
@@ -79,9 +79,20 @@
         </div>
     </section>
     <!-- Wireframe -->
-    <section>
+    <section id="wireframe">
         <div class="contenedor">
-            <h2>Wireframe</h2>
+            <div id="textowire">
+                <h2>Wireframe</h2>
+                <p>El wireframe es la representaci&oacute;n visual de la estructura 
+                    b&aacute;sica de una p&aacute;gina. Debe ser realizado de la manera
+                    como una especie de bosquejo, sin colores ni im&aacute;genes. Click en el
+                    bot&oacute;n <span>o escanee el c&oacute;digo QR </span> 
+                    para obtener m&aacute;s informaci&oacute;n
+                    <a href="wireframe.pdf" target="_blanck">PDF</a>
+                </p>    
+                <div id="qrcode">
+
+            </div>
         </div>
     </section>
     <!-- Contenido -->
